k8-configs/k8s-hangout-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hangout-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: hangout-auth-service
            port:
              number: 5011
